--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -15,7 +15,8 @@
     "- The mus vector might be a tricky thing to solve; it is the parameter that the model solves for a given variance - so as of now this is a exponentially distributed scale, which is later multiplied by the covariance matrix in the optimization (see: https://cvxopt.org/examples/book/portfolio.html). More intuitively (and closer to the actual model), mus should be distributed between the minimum return (either simply 0, or the return of the minimum-return asset) and the maximum return asset. The problem is, that the constraint matrices will have to be modified accordingly (instead of multiplying mu by covariance)\n",
     "- This is *the* foundational model in portfolio optimization, better and more robust models have been suggested\n",
     "- Vizualisation and \n",
-    "\n"
+    "\n",
+    "![Tangent Portfolio](https://github.com/kgeoffrey/Mean-Variance-Model/blob/master/Notebooks/tangentportfolio.gif)"
    ]
   },
   {
