corrected image display

--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -16,7 +16,7 @@
     "- This is *the* foundational model in portfolio optimization, better and more robust models have been suggested\n",
     "- Vizualisation and \n",
     "\n",
-    "![Tangent Portfolio](https://github.com/kgeoffrey/Mean-Variance-Model/blob/master/Notebooks/tangentportfolio.gif)"
+    "![Tangent Portfolio](https://github.com/kgeoffrey/Mean-Variance-Model/blob/master/Notebooks/tangentportfolio.gif?raw=true)"
    ]
   },
   {
