--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -277,11 +277,12 @@
     }
    ],
    "source": [
-    "## You can play with the output here!\n",
+    "## You can play with the output here! simply run all the code and \n",
     "# the variable sublist, containst a list (of 100? --> check scale variable) of portfolios on the optimal boundary\n",
     "\n",
     "#This prints the maximum sharpe portfolio for instance! \n",
-    "print(sublist[max_sharpe_weights])\n"
+    "print(sublist[max_sharpe_weights])\n",
+    "\n"
    ]
   },
   {
