--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -140,12 +140,12 @@
    "source": [
     "# 5. Visualization \n",
     "\n",
-    "Below we can work on 5. visulatization. For results I simply posted the code from the other notebook (without the pie-charts, doughnut chart or risk-return plots). Also simplified the code, so it is more readable, simply run the cell and play with the output! "
+    "Below we can work on 5. visulatization. I simply posted the code from the other notebook (without the pie-charts, doughnut chart or risk-return plots). Also simplified the code, so it is more readable, simply run the cell and play with the output below! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,8 @@
     }
    ],
    "source": [
-    "## You can play with the output here! simply run all the code and \n",
+    "## You can play with the output here! simply run all the code above! \n",
+    "\n",
     "# the variable sublist, containst a list (of 100? --> check scale variable) of portfolios on the optimal boundary\n",
     "\n",
     "#This prints the maximum sharpe portfolio for instance! \n",
