uploaded test note book
finally solved part of convex region problem

--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,89 +136,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.01829769]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]\n",
-      " [0.        ]]\n",
-      "19\n"
+      "1\n"
      ]
     }
    ],
    "source": [
     "pbar = np.mean(returns, axis=1) \n",
-    "n = len(returns)\n",
+    "n = len(returns.T)\n",
     "r_min = np.min(pbar)\n",
     "\n",
     "h=(np.concatenate((-np.ones((1,1))*r_min,np.zeros((n,1))),0))\n",
     "#G=np.concatenate((-np.transpose(pbar),-np.identity(n)),0)\n",
     "\n",
-    "print(h)\n",
-    "print(n)"
+    "#print(h)\n",
+    "#print(n)\n",
+    "\n",
+    "print(len(-np.transpose(pbar)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.83e-02  8.30e-03 -9.56e-05 -4.08e-03  4.77e-04 -7.27e-03  1.10e-02 ... ]\n",
-      "[-1.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -1.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -1.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -1.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -1.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -1.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -1.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "[-0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 -0.00e+00 ... ]\n",
-      "\n"
+      "210\n",
+      "20\n"
      ]
     }
    ],
    "source": [
-    "n = len(returns)\n",
-    "returns = np.asmatrix(returns)\n",
+    "n = len(returns.T)\n",
+    "returns = np.asmatrix(returns.T)\n",
     "pbar = opt.matrix(np.mean(returns, axis=1))\n",
     "G=opt.matrix(np.concatenate((-np.transpose(pbar),-np.identity(n)),0))\n",
     "\n",
-    "print(G)\n"
+    "print(len(G))\n",
+    "print(len(h))"
    ]
   },
   {
@@ -232,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +224,8 @@
     "\n",
     "Minimal_gewicht1 = -0.0\n",
     "Maximal_gewicht1 = 0.1\n",
-    "Minimal_gewicht2 = 0.05\n",
-    "Maximal_gewicht2 = 0.15\n",
+    "Minimal_gewicht2 = 0.0\n",
+    "Maximal_gewicht2 = 0.1\n",
     "Scale = 100 \n",
     "Riskaversion = 99 \n",
     "rf = 0.01 \n",
@@ -339,27 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[4.99980916e-02]\n",
-      " [9.99999882e-02]\n",
-      " [2.42207863e-08]\n",
-      " [1.78103949e-07]\n",
-      " [9.99999859e-02]\n",
-      " [9.99999986e-02]\n",
-      " [9.99999894e-02]\n",
-      " [9.99999931e-02]\n",
-      " [1.52907400e-08]\n",
-      " [9.99999909e-02]\n",
-      " [1.73426657e-06]\n",
-      " [1.49999994e-01]\n",
-      " [5.00000202e-02]\n",
-      " [1.49999996e-01]]\n"
+      "[[9.99997480e-02]\n",
+      " [9.99997806e-02]\n",
+      " [2.00707982e-07]\n",
+      " [1.00742379e-02]\n",
+      " [9.99999299e-02]\n",
+      " [9.99999865e-02]\n",
+      " [9.99998989e-02]\n",
+      " [9.99999553e-02]\n",
+      " [1.87472849e-07]\n",
+      " [9.99999480e-02]\n",
+      " [7.22147692e-02]\n",
+      " [9.99999635e-02]\n",
+      " [1.77114262e-02]\n",
+      " [9.99999677e-02]]\n"
      ]
     }
    ],
