updated problems list (3 is done)

--- a/Notebooks/Problems to be solved.ipynb
+++ b/Notebooks/Problems to be solved.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "2. Exp. Returns (Mean Returns) is a quite bad criterion for futurue returns, Markowitz himself said that\n",
     "\n",
-    "3. Mus vector (exponentially distributed), is rather inaccurate at finding the 'true' convex region. The mus vector might be a tricky thing to solve; it is the parameter that the model solves for a given variance - so as of now this is a exponentially distributed scale, which is later multiplied by the covariance matrix in the optimization (see: https://cvxopt.org/examples/book/portfolio.html). More intuitively (and closer to the actual model), mus should be distributed between the minimum return (either simply 0, or the return of the minimum-return asset) and the maximum return asset. The problem is, that the constraint matrices will have to be modified accordingly (instead of multiplying mu by covariance)\n",
+    "3. Mus vector (exponentially distributed), is rather inaccurate at finding the 'true' convex region. The mus vector might be a tricky thing to solve; it is the parameter that the model solves for a given variance - so as of now this is a exponentially distributed scale, which is later multiplied by the covariance matrix in the optimization (see: https://cvxopt.org/examples/book/portfolio.html). More intuitively (and closer to the actual model), mus should be distributed between the minimum return (either simply 0, or the return of the minimum-return asset) and the maximum return asset. The problem is, that the constraint matrices will have to be modified accordingly (instead of multiplying mu by covariance) \n",
     "\n",
     "4. This is *the* foundational model in portfolio optimization, better and more robust models have been suggested\n",
     "\n",
@@ -29,7 +29,7 @@
     "\n",
     "2. This can be done by simply setting all returns to 1 or using log returns instead! (there is a pitfall though: https://papers.ssrn.com/sol3/papers.cfm?abstract_id=1549328) \n",
     "\n",
-    "3. Tricky and probabaly the most work, a quantopian user managed to do this (https://www.quantopian.com/posts/the-efficient-frontier-markowitz-portfolio-optimization-in-python-using-cvxopt). The program as of now can allow for short selling and put restrictions on invidual assets weights,by modifying h and G matrices accordingly. I will have to figure out new ways of implementing these features after using the better formulation of the optimization probelm\n",
+    "3. Tricky and probabaly the most work, a quantopian user managed to do this (https://www.quantopian.com/posts/the-efficient-frontier-markowitz-portfolio-optimization-in-python-using-cvxopt). The program as of now can allow for short selling and put restrictions on invidual assets weights,by modifying h and G matrices accordingly. I will have to figure out new ways of implementing these features after using the better formulation of the optimization probelm ~~\n",
     "\n",
     "4. The Mean-Absolute-Deviation Model is finished and ready for upload (it is not parametrized however, it only solves for the minimum variance portfolio - also the region is not convex, a story for another time). Interesting to implement would be the Black-Litterman Model (as it allows to incorporate one's own views; aka I think security x will outperfom security y), there are other models but they are very difficult to implement (downside risk models etc.)\n",
     "\n",
@@ -336,20 +336,6 @@
     "print(sublist[max_sharpe_weights])\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -368,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
